@@ -15,6 +15,7 @@
     * changed the way postgresql, database and tables are checked.
     * few corrections.
     * the calibration methode and values have been transferred to the sensors' dictionary.
+    * simplified weather forecast requests.
 
   * ADDED
     * a new download thread has been added (part of new update system).
